[package]
name = "scout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest-graphql = "1.0.0"
reqwest = { version = "0.11.22", features = ["json"] }
anyhow = "1.0.75"
dotenv = "0.15.0"
actix-web-prometheus = "0.1.2"
prometheus = "0.13.3"
